# project-aether

./: .env.example  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: abstract_cache.json  keyword_cache.json  scoring_cache.json  search_cache.json  translation_cache.json
docs/: en-ops-v3.2-documentation-version-1.3.20.md  epo_known_gaps.md  implementation_plan.md  provider_migration_notes.md
src/project_aether/: __init__.py  app.py
src/project_aether/agents/: __init__.py  analyst.py  manager.py  researcher.py
src/project_aether/core/: __init__.py  config.py  keyword_helpers.py  keyword_translation.py  keywords.py  llm_scoring.py  log_stream.py  mcp_client.py  scoring_cache.py  search_cache.py  translation_service.py
src/project_aether/services/: search.py
src/project_aether/tools/: __init__.py  epo_api.py  inpadoc.py  lens_api.py
src/project_aether/ui/: analysis.py  dashboard.py  deepdive.py  logs.py  results.py  sidebar.py  styles.py
src/project_aether/utils/: __init__.py  artifacts.py
