[project]
name = "project-aether"
version = "0.1.0"
description = "Agentic patent intelligence framework for anomalous hydrogen phenomena."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Andras Fuchs", email = "andras.fuchs@gmail.com" }
]
keywords = ["patent-analysis", "agentic-ai", "lenr", "streamlit", "mcp"]

# Core dependencies
dependencies = [
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "mcp>=1.0.0",
    "lancedb>=0.17.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.48.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# FIX 1: Explicitly tell Hatchling where the code is
[tool.hatch.build.targets.wheel]
packages = ["src/project_aether"]

# FIX 2: Use the new dependency-groups format (removes deprecation warning)
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"